--- a/src/AspCourse/Views/Shared/_Layout.cshtml
+++ b/src/AspCourse/Views/Shared/_Layout.cshtml
@@ -35,6 +35,7 @@
                 <ul class="nav navbar-nav">
                     <li><a asp-controller="Chat" asp-action="Index">Chat</a></li>
                     <li><a asp-controller="Profile" asp-action="Index">My Profile</a></li>
+                    <li><a asp-controller="Profile" asp-action="AllProfiles">All Users</a></li>
                 </ul>
                 @await Html.PartialAsync("_LoginPartial")
             </div>
