Moders can add-remove moders

--- a/src/AspCourse/Views/Chat/Index.cshtml
+++ b/src/AspCourse/Views/Chat/Index.cshtml
@@ -11,7 +11,7 @@
                 NewTopicTitle: $('#newTopicTitle').val(),
             },
             success: function (data) {
-                
+                window.location.reload();
                 console.log(data);
             }
         });
@@ -23,6 +23,7 @@
             type:"DELETE",
             success: function (data) {
                 console.log(data);
+                window.location.reload();
             }
         })
     }
