--- a/src/AspCourse/Views/Profile/AllProfiles.cshtml
+++ b/src/AspCourse/Views/Profile/AllProfiles.cshtml
@@ -6,14 +6,28 @@
 
 </script>
 
-@{ 
+@{
+    <br />
+    <p><a href="/Profile/AllProfiles">Users</a><span  style="width:25px;display: inline-block"></span><a href="/Profile/AllModers">Moderators</a></p>
+    <h1>@ViewData["ListTitle"]</h1>
     foreach (var user in Model.Users.OrderBy(u => (u.IsBanned ? 10 : 0) + (u.IsMuted ? 5 : 0)))
     {
-
-        <p><a href="/Porfile/GetUser/?username=@user.UserName">@user.NickName</a></p>
+        
+        <p><img src="@user.AvatarUrl" height="100px"/></p>
+        <p><a href="/Profile/GetUser/?username=@user.UserName">@user.NickName</a></p>
         <p>@user.UserName - @user.LastSeenAt - @user.RegisteredAt - Muted:@user.IsMuted - Banned:@user.IsBanned</p>
         <p>Messages: @Model.Messages.Where(m=>m.AuthorId==user.UserName).Count()</p>
-        <p>Last Message at: @Model.Messages.Where(m => m.AuthorId == user.UserName).OrderBy(m=>m.CreatedAt).Last().CreatedAt</p>
+        
+        var MyMessages = Model.Messages.Where(m => m.AuthorId == user.UserName).OrderBy(m => m.CreatedAt);
+        if (MyMessages.Count() > 0)
+        {
+            <p>Last Message: @MyMessages.Last().CreatedAt</p>
+        }
+        else
+        {
+            <p>No Messages yet</p>
+        }
+       
         <hr />
     }
 }
