Fixed set ban time setting and unban time checked properly

--- a/src/AspCourse/Views/Chat/Topic.cshtml
+++ b/src/AspCourse/Views/Chat/Topic.cshtml
@@ -18,8 +18,11 @@
             },
             success: function (data) {
                 console.log(data);
+                if (data == "YOU ARE MUTED") {
+                    alert("You are muted!");
+                }
                 window.location.reload();
-            }
+            },            
         });
     }
 
