--- a/src/AspCourse/Views/Chat/Index.cshtml
+++ b/src/AspCourse/Views/Chat/Index.cshtml
@@ -85,85 +85,80 @@
 <br />
 
 @{
-    foreach (var p in Model.Previews.OrderByDescending(p => p.Item3).OrderByDescending(p => p.Item1.IsSticky))
-    {
-        Topic t = p.Item1;
-        Message opMessage = p.Item2.FirstOrDefault();
+    
+    
+        foreach (var p in Model.Previews
+            .OrderByDescending(p => p.Item3)
+            .OrderByDescending(p => p.Item1.IsSticky))
+        {
+            Topic t = p.Item1;
 
 
 
-        <div class="well" style="background-color:@opMessage?.Author.Color">
-            <h2>
-                @if (t.IsSticky)
-                {
-                    <abbr title="Thread is sticky"><span class="glyphicon glyphicon-pushpin" aria-hidden="true"></span></abbr>
-                }
-                @if (t.IsClosed)
-                {
-                    <abbr title="Thread is closed"><span class="glyphicon glyphicon-alert" aria-hidden="true"></span></abbr>
-                }
-
-
-                <a href="~/Chat/Topic/@t.Id.ToString()">@t.Title</a>
-
-
-                @if (Model.IsModer)
-                {
-                    <span style="font-size:12px">
-
-                        <button onclick="removeTopic(@t.Id)">DELETE</button>
-
-                        @if (t.IsSticky)
-                        {
-                            <button style="background-color:green" onclick="toggleTopicSticked(@t.Id)">STICKED</button>
-                        }
-                        else
-                        {
-                            <button style="background-color:red" onclick="toggleTopicSticked(@t.Id)">STICKED</button>
-                        }
-                        @if (t.IsClosed)
-                        {
-                            <button style="background-color:green" onclick="toggleTopicClosed(@t.Id)">CLOSED</button>
-                        }
-                        else
-                        {
-                            <button style="background-color:red" onclick="toggleTopicClosed(@t.Id)">CLOSED</button>
-                        }
-
-                    </span>
-                }                
-
-            </h2>
-            @if (opMessage != null)
-            {
-                <hr />
-                    <img src="@opMessage.Author.AvatarUrl" width="50" />
-                    <p>@opMessage.Id - <a href="~/Profile/GetUser/?username=@opMessage.AuthorName">@opMessage.Author.NickName</a> - @opMessage.CreatedAt.ToLocalTime()</p>
-                    <p>@opMessage.Text</p>
-                    @if (!string.IsNullOrEmpty(opMessage.PictureUrl))
+            <div class="well" style="background-color:red">
+                <h2>
+                    @if (t.IsSticky)
                     {
-                        <p><a target="_blank" href="@opMessage.PictureUrl"><img src="@opMessage.PictureUrl" height="300" /></a></p>
+                        <abbr title="Thread is sticky"><span class="glyphicon glyphicon-pushpin" aria-hidden="true"></span></abbr>
                     }
-            }
-        </div>
-        <div style="margin-left:30px">
-            @{
-                foreach(Message m in p.Item2.Skip(1).ToList())
-                {
-                    <div class="well" style="background-color:@m.Author.Color">
-                        <img src="@m.Author.AvatarUrl" width="50" />            
-                        <p>@m.Id - <a href="~/Profile/GetUser/?username=@m.AuthorName">@m.Author.NickName</a> - @m.CreatedAt.ToLocalTime()</p>
-                        <p>@m.Text</p>
-                        @if (!string.IsNullOrEmpty(m.PictureUrl))
-                        {
-                            <p><a target="_blank" href="@m.PictureUrl"><img src="@m.PictureUrl" height="300" /></a></p>
-                        }
+                    @if (t.IsClosed)
+                    {
+                        <abbr title="Thread is closed"><span class="glyphicon glyphicon-alert" aria-hidden="true"></span></abbr>
+                    }
 
-                    </div>
-                }
+
+                    <a href="~/Chat/Topic/@t.Id.ToString()">@t.Title</a>
+
+
+                    @if (Model.IsModer)
+                    {
+                        <span style="font-size:12px">
+
+                            <button onclick="removeTopic(@t.Id)">DELETE</button>
+
+                            @if (t.IsSticky)
+                            {
+                                <button style="background-color:green" onclick="toggleTopicSticked(@t.Id)">STICKED</button>
+                            }
+                            else
+                            {
+                                <button style="background-color:red" onclick="toggleTopicSticked(@t.Id)">STICKED</button>
+                            }
+                            @if (t.IsClosed)
+                            {
+                                <button style="background-color:green" onclick="toggleTopicClosed(@t.Id)">CLOSED</button>
+                            }
+                            else
+                            {
+                                <button style="background-color:red" onclick="toggleTopicClosed(@t.Id)">CLOSED</button>
+                            }
+
+                        </span>
+                    }                
+
+                </h2>
+                
+            </div>
+            <div style="margin-left:30px">
+                @{                    
+                    foreach(Message m in p.Item2)
+                    {
+                        <div class="well" style="background-color:@m.Author.Color">
+                            <img src="@m.Author.AvatarUrl" width="50" />            
+                            <p>@m.Id - <a href="~/Profile/GetUser/?username=@m.Author.NickName">@m.Author.NickName</a> - @m.CreatedAt.ToLocalTime()</p>
+                            <p>@m.Text</p>
+                            @if (!string.IsNullOrEmpty(m.PictureUrl))
+                            {
+                                <p><a target="_blank" href="@m.PictureUrl"><img src="@m.PictureUrl" height="300" /></a></p>
+                            }
+
+                        </div>
+                    }
+                    
             }
-        </div>
+            </div>
     }
+
 }
 
 
